--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -46,10 +46,6 @@
                       <p style="color: black;"><strong><%= product.artData[0].title %></strong></p>
                       <p style="color: black;"><%= product.artData[0].description %></p>
                       <p style="color: black;">Amount : $<%= product.artData[0].last_bid %></p>
-                      <button type="button" class="btn btn-primary btn-sm me-1 mb-2" data-mdb-toggle="tooltip"
-                        title="Remove item">
-                        <i class="fas fa-trash"></i>
-                      </button>
                       
                       <!-- Data -->
                     </div>
@@ -111,10 +107,11 @@
                       <span><strong>$<%= total %></strong></span>
                     </li>
                   </ul>
-      
+                  <% if (cartLength > 0) { %>
                   <button type="button" class="btn btn-primary btn-lg btn-block" onclick="purchase()">
                     Go to checkout
                   </button>
+                  <% } %>
                 </div>
               </div>
             </div>
