--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -34,10 +34,15 @@
                       <div class="bg-image hover-overlay hover-zoom ripple rounded" data-mdb-ripple-color="light">
                         <img src="<%= product.artData[0].image %>"
                           class="w-100" alt="Blue Jeans Jacket" />
-                        <a href="#!">
-                          <div class="mask" style="background-color: rgba(251, 251, 251, 0.2)"></div>
-                        </a>
+                          <br>
+                       
                       </div>
+
+                      <a href="#!">
+                        <a class="btn btn-danger" href="remove-cart/<%= product.art_id %>" role="button" style="
+                          margin-top: 24px;
+                      ">Remove</a>
+                      </a>
                       <!-- Image -->
                     </div>
       
