--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -46,6 +46,15 @@
                         <input class="btn btn-primary" type="file" name ="profile_image" multiple="multiple" accept="image/*">
                     </div>
                 </div>
+
+                <div class="card mb-4 mb-xl-0">
+                    <div class="card-header"></div>
+                    <div class="card-body text-center">
+                        <!-- Profile picture image-->
+                        
+                        <a class="btn btn-primary" href="/winning-bid" role="button">Won Bids</a>
+                    </div>
+                </div>
             </div>
             <div class="col-xl-8">
                 <!-- Account details card-->
