--- a/views/art-detail.ejs
+++ b/views/art-detail.ejs
@@ -88,7 +88,7 @@
                 <!-- <a href="#" id="buy" class="btn btn-warning shadow-0" style="display: none;" > Buy now </a> -->
                 <a id="addcart" href="javascript:addToCart()" class="btn btn-primary shadow-0" style="display: none;"> <i class="me-1 fa fa-shopping-basket"></i> Add to cart </a>
 
-                <div id="alreadyadded" style="display: none;"><h4>Already added to card </h4><a  href="/cart" class="btn btn-primary shadow-0"> <i class="me-1 fa fa-shopping-basket"></i>Go To Cart </a></div>\
+                <div id="alreadyadded" style="display: none;"><h4>Already added to card </h4><a  href="/cart" class="btn btn-primary shadow-0"> <i class="me-1 fa fa-shopping-basket"></i>Go To Cart </a></div>
 
                 <% }else { %>
 
