--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,7 +10,6 @@
 
         <div class="col-9"> 
            
-            
         <!-- Code for viewing the Post -->
         <% art[0].art.forEach((product,key) => { %>
 
@@ -80,15 +79,11 @@
                         <b>End Date & Time:</b> <%= product.end_date %> <%= product.end_time %>
                         </p> 
                     </span> 
-                <button type="button" class="btn btn-info btn-lg" onclick="openModel('<%= product._id %>')">View all comments</button>
-                    
+                    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal" onclick="openModel('<%= product._id %>')">View all comments</button>
+                
                     
 
-                    <!-- <a href="#" data-toggle="modal" data-target="#myModal" > 
-                        
-                        <h4 class="comments">View all comments</h4> 
-                    </a>  -->
-                   
+                    
                     <div class="addComments"> 
                         <div class="reaction"> 
                             <h3> 
@@ -110,13 +105,42 @@
             </div> <br><br>
 
             <% }) %>
-            
+            <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalScrollableTitle" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-scrollable" role="document">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="exampleModalScrollableTitle">All Comments</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                    
+                            <% if (comment.comment && comment.length> 0) { %>
+                                <div> 
+                                <% comment.forEach((comments,key1) => { %>"
+                                  <span><%= comments.comment %></span>
+                                </div>
+                                <% }) %>  
+                            <% }else { %>
+                                <div>
+                                    <span>No Record found</span>
+                                  </div>
+                            <% } %>
+                         
+                        
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                  </div>
+                </div>
         </div> 
         
+          
 </body>
 <script>
      function openModel(id) {
-        // $('#myModal').modal('show');
+        
         $.ajax({
             type: "POST",
             url: 'http://localhost:8081/get-all-comments',
@@ -124,12 +148,17 @@
                 id: id
                 // will be accessible in $_POST['data1']
             },
-            success: function(data)
-            {
-              console.log(data)
-            }
+            success: function(comment){
+                console.log(comment)
+
+                return {
+                        comment : comment,
+                    }
+            },
+            dataType: "json"
         });
     }
+    
     function postComment(e,key) {
         // $("#idForm").submit(function(e) {
         e.preventDefault(); // avoid to execute the actual submit of the form.
